# tuning-fork-clock

./: .gitignore  CMakeLists.txt  INSTALL.md  data.py  log.py  log.sh  plot.py  upload.sh
Inspiration/: retroleds.ino
analysis/: data.py  estimate.py  log.py  plot.py
doc/: Anschwingverhalten.csv
include/: config.hpp
model/: Stand.FCStd  Tuningforkholder.scad  Tuningforkholder_all.stl  Tuningforkholder_base.stl  Tuningforkholder_bottom.stl  Tuningforkholder_top.stl  render.sh
pcb/: .gitignore  MCU.kicad_sch  fp-info-cache  project_lib.bak  project_lib.kicad_sym  ptf.kicad_pcb  ptf.kicad_prl  ptf.kicad_pro  ptf.kicad_sch
src/: averager.hpp  bme280.hpp  bme280_detail.hpp  bmp280.hpp  bmp280_detail.hpp  estimator.hpp  led.hpp  main.cpp  rtc.cpp
